--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Fun with promises",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "build": "webpack"
   },
-  "author": "mikhama",
+  "author": "L.Zhovtiak",
   "license": "MIT",
   "devDependencies": {
-    "json-server": "^0.16.3"
+    "json-server": "^0.16.3",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "bootstrap": "^5.2.0"
+    "bootstrap": "^5.2.0",
+    "webpack": "^5.74.0"
   }
 }
