--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,21 @@
 {
-    "compilerOptions": {
-      "target": "es6",
+  "compilerOptions": {
+      "outDir": "./dist/",
+      "sourceMap": true,
+      "strict": true,
+      "noImplicitReturns": true,
+      "noImplicitAny": true,
       "module": "es6",
-      "esModuleInterop": true,
       "moduleResolution": "node",
-      // ... your other options
-    }
-  }
-  
+      "target": "es5",
+      "allowJs": true,
+      "downlevelIteration": true,
+      "lib": [
+        "es5", "es6", "dom", "dom.iterable"
+    ]
+
+  },
+  "include": [
+      "./src/**/*"
+  ]
+}
